# QueueingModellingDSL

./: .gitignore  README.md  distribution.py  information_source.py  main.py  model_exporter.py  processing_unit.py  program.qs  pyproject.toml  qmodel.py  qsystem.py  qsystem.tx  simulation_tests.py  statistics.py
Frontend/: distribution.py  generate_generator_statistics.py  generate_generators.py  generate_generators_settings.py  generate_processor_statistics.py  generate_processors.py  generate_processors_settings.py  generate_system_settings.py  information_source.py  main.py  main_new_try.py  model_reader.py  processing_unit.py  program.qs  qmodel.py  qsystem.py  qsystem.tx  request.py  stylization.py
backend/: __init__.py  distribution.py  graph.py  information_source.py  lang.py  processing_unit.py  qmodel.py  qsystem.py  request.py  requirements.txt  statistics.py
models/: program.qs  qsystem.tx
