[project]
name = "qmodelling"
version = "0.1.0"
description = "DSL language for queue modelling"
authors = [
    {name = "Timofey Evsigneev", email = "timofey.evsigneev@gmail.com"},
    {name = "Tatjana Gavrilovic", email = "gavrilovic@uns.ac.rs"},
]

license = {text = "GNU GENERAL PUBLIC LICENSE"}
keywords = ["queue-modelling", "language", "DSL"]
readme = "README.md"

requires-python = ">=3.8, <3.13"
dependencies = [
    "matplotlib >= ^3.9.0",
    "textx = ^4.0.1",
    "importlib-metadata; python_version < '3.10'",  # For entry_points backward compatibility
]

[project.entry-points.textx_languages]
entity = "backend.lang:entity_lang"

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.8.0,<4"]

[project.urls]
Repository = "https://github.com/Tulenien/QueueingModellingDSL.git"

[tool.flit.module]
name = "backend"



